<resources>
    <string name="app_name">SimplePlayer</string>
    <string name="title_activity_landing_page">LandingPageActivity</string>
    <string name="video_title_01">Google Art and Culture</string>
    <string name="video_title_02">Small Space Entertaining Makeover Ideas – IKEA</string>
    <string name="video_title_03">Shared Boys’ Bedroom Makeover Ideas – IKEA</string>
    <string name="channel_name">Cozy Channel</string>
    <string name="video_views_01">33,042 views 15,000 likes</string>
    <string name="video_views_02">12,409 views 1,453 likes</string>
    <string name="video_views_03">9,033 views 1,453 likes</string>
</resources>
