<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="phchu.simpleplayer.MainActivity">
    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@mipmap/channel_banner"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <VideoView
                android:id="@+id/video_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/video_title_01"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/channel_name"
                    android:textSize="20sp"
                    android:textColor="#797979"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/video_views_01"
                    android:textSize="20sp"
                    android:textColor="#797979"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/video_thumbnail_02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@mipmap/video_screen_02"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/video_title_02"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/channel_name"
                    android:textSize="20sp"
                    android:textColor="#797979"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/video_views_02"
                    android:textSize="20sp"
                    android:textColor="#797979"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/video_thumbnail_03"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@mipmap/video_screen_03"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/video_title_03"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/channel_name"
                    android:textSize="20sp"
                    android:textColor="#797979"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/video_views_03"
                    android:textSize="20sp"
                    android:textColor="#797979"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
